force-app/main/default/objects/Invoice__c/fields/Caseworker__c.field-meta.xml
<CustomField>
    <fullName>Caseworker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caseworker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (Caseworker)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>