force-app/main/default/objects/Invoice__c/fields/CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CreateDate__c</fullName>
    <label>Create Date</label>
    <type>Date</type>
</CustomField>