force-app/main/default/objects/Invoice__c/fields/Service_Delivery_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Fee__c</fullName>
    <formula>Service__r.Delivery_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Delivery Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>