force-app/main/default/objects/Invoice__c/fields/Service_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_Amount__c</fullName>
    <formula>Service__r.TaxAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>