force-app/main/default/objects/Invoice__c/fields/Service_Total__c.field-meta.xml
<CustomField>
    <fullName>Service_Total__c</fullName>
    <formula>Service__r.TotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>