force-app/main/default/objects/Invoice__c/fields/TotalCost__c.field-meta.xml
<CustomField>
    <fullName>TotalCost__c</fullName>
    <label>Total Cost</label>
    <summarizedField>InvoiceItem__c.Price__c</summarizedField>
    <summaryForeignKey>InvoiceItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>