force-app/main/default/objects/Invoice__c/fields/TotalPaid__c.field-meta.xml
<CustomField>
    <fullName>TotalPaid__c</fullName>
    <label>Total Paid</label>
    <summarizedField>InvoicePayment__c.Amount__c</summarizedField>
    <summaryForeignKey>InvoicePayment__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>