force-app/main/default/objects/Invoice__c/fields/TotalPaidb__c.field-meta.xml
<CustomField>
    <fullName>TotalPaidb__c</fullName>
    <label>Total Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>