force-app/main/default/objects/Invoice__c/fields/ViewPDF__c.field-meta.xml
<CustomField>
    <fullName>ViewPDF__c</fullName>
    <formula>HYPERLINK(&apos;/apex/InvoicePDF?id=&apos;&amp; Id , &apos;View PDF&apos; , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View PDF</label>
    <type>Text</type>
</CustomField>