force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BalanceDue__c</columns>
    <columns>Agency__c</columns>
    <columns>Client__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>